[gd_scene load_steps=5 format=3 uid="uid://d2n7rba2ejvu1"]

[ext_resource type="Script" path="res://The_Alchemist_Quest/scripts/puzzle/lab_workbench.gd" id="1_1phwm"]
[ext_resource type="Texture2D" uid="uid://c2qrew0sidieb" path="res://The_Alchemist_Quest/assets/decor/Lab_workbench.png" id="2_awdvr"]
[ext_resource type="PackedScene" uid="uid://d2kgk3f4vg6vs" path="res://The_Alchemist_Quest/scences/puzzle/intro_room/puzzle_ui_task1.tscn" id="2_g24yl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukwlm"]
size = Vector2(74, 47)

[node name="LabWorkbench" type="Node2D"]
script = ExtResource("1_1phwm")
puzzle_ui_scene = ExtResource("2_g24yl")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_ukwlm")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_awdvr")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_area_2d_body_exited"]
